--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.springframework.security.oauth2=debug
-
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 
 
 # Keep the connection alive if idle for a long time (needed in production)
